# sharkbite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  PANDASHARKREADME.md  PYTHONREADME.md  README.md  Readme.md  SECURITY.md  bootstrap  bootstrap-gtest.sh  bootstrap-hdfs3.sh  bootstrap-protobuf.sh  bootstrap-thrift.sh  bootstrap-travis  bootstrap-zookeeper.sh  bootstrapper.sh  features.list  install-gtest.sh  install-hdfs3.sh  install-protobuf.sh  install-thrift.sh  install-zookeeper.sh  osxcmake.yml  pandashark.py  pre-commit.sh  pythonexample.py  setup.py  sharkbite.kdev4  sharkbitedev.rst
.github/workflows/: ccpp.yml  codeql-analysis.yml  osxccpp.yml  osxcmake.yml  osxcpp.yml
.kdev4/: sharkbite.kdev4
c-library-examples/python/accumulo/: __init__.py
cmake/modules/: .FindGTest.cmake.kate-swp  Compression.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindGTest.cmake  FindHdfs3.cmake  FindThrift.cmake  FindXml2.cmake  FindZookeeper.cmake  LibXML2.cmake  LibreSSL.cmake  ZlibLibDeflate.cmake
cmake/override/: FindLIBDEFLATE.cmake  FindOpenSSL.cmake
docker/: Dockerfile  hdfswrite.py  runhdfstests.sh
docker/hdfstests/: hdfslist.py  hdfsremove.py  hdfswrite.py  runhdfstests.sh
dockerbuild/: DockerBuild.sh  Dockerfile
dockerbuild/bionic/: Dockerfile
dockerbuild/centos/: Dockerfile
docs/: .readthedocs.yml  Makefile  asynciterator.rst  conf.py  hdfsclient.rst  index.rst  intro.rst  oldsharkbitedocs.rst  requirements.txt  sharkbitedocs.rst  stats.rst
examples/: CppExample.cpp  asyncexample.py  dataframe.py  exampleiterator.py  hdfslist.py  hdfswrite.py  iterator.py  jsoncombiner.py  lambdaexample.py  pythonexample.py  pythonstats.py  rfileread.py  torchexample.py  writerexample.py
include/: ClientExample.h
include/concurrency/: Executor.h  ReturnType.h  ThreadPool.h  test.cpp  test2.cpp
include/data/: Data.h
include/data/client/: ExtentLocator.h  LocatorCache.h  MetaDataLocationObtainer.h  RootTabletLocator.h  TabletLocation.h  TabletLocationObtainer.h  TabletServerLocator.h
include/data/constructs/: AllocatorPool.h  CompressorPool.h  ConfigurationOptions.h  ConstructPool.h  FastObj.h  InstanceVersion.h  IterInfo.h  Key.h  KeyExtent.h  KeyValue.h  MovablePointer.h  Mutation.h  ObjectPool.h  PythonIterInfo.h  Range.h  ScanBatch.h  SkippedRelativeKey.h  StructureDefinitions.h  Text.h  column.h  inputvalidation.h  rkey.h  scanstate.h  value.h
include/data/exceptions/: ClientException.h  HDFSException.h  IllegalArgumentException.h  IllegalStateException.h  NotServingException.h  (+2 more)
include/interconnect/: Accumulo.h  AccumuloConnector.h  ClientInterface.h  Connector.h  InterConnect.h  Master.h  RootInterface.h  Scan.h  ScanArbiter.h  ScannerInterface.h  TabletServer.h  TransportPool.h  Write.h
include/jni/: AccumuloKey.h  AccumuloRange.h  AccumuloValue.h  DSLIterator.h  IteratorExecutor.h  Iterators.h  JNIUtil.h  JVMLoader.h  JavaClass.h  JavaDefs.h  JavaException.h  JniMethod.h  PythonBindings.h  PythonIterator.h
include/logging/: Logger.h  LoggerConfiguration.h  Properties.h
include/minifi/: LoaderFile.h
include/python/: TableOps.h  bindings.h
include/scanner/: ScannerOptions.h  Source.h
include/utils/: BackTrace.h  ClassUtils.h  ConcurrentQueue.h  EnumClass.h  MemoryUtils.h  StringUtils.h  ThreadPool.h  TryMoveCall.h  Uri.h
include/writer/: Sink.h  SinkConditionals.h
native-iterators-jni/: pom.xml
pandashark/: __init__.py  pandassharkbite.py
python/: example.py  setup.py
python-deprecated/: example.py
python/accumulo/: __init__.py
sharkbite/: __init__.py  torch.py
src/: ClientExample  Makefile  Makefile.inc
src/data/: Data.cpp  Makefile
src/examples/: ClientExample.cpp  Compact.cpp  ContinuousIngest.cpp  HedgedRead.cpp  InsertTest.cpp  PrintInfo.cpp  RfileReadExample.cpp  RfileWriteExample.cpp  TableOps.cpp  test_base.h
src/interconnect/: .kdev_include_paths  Accumulo.cpp  AccumuloConnector.cpp  ClientInterface.cpp  InterConnect.cpp  Makefile  Master.cpp  RootInterface.cpp  Scan.cpp  ScanArbiter.cpp  ScannerInterface.cpp  TabletServer.cpp  TransportPool.cpp  Write.cpp  out
src/jni/: DSLIterator.cpp  IteratorExecutor.cpp  PythonIterator.cpp
src/logging/: LoggerConfiguration.cpp  Properties.cpp
src/minifi/: LoaderFile.cpp
src/python/: Bindings.cpp  pysharkbite.cpp  source.cpp
src/scanner/: Makefile  ScannerOptions.cpp  Source.cpp
src/services/: Server.cpp
src/utils/: ClassUtils.cpp  StringUtils.cpp  ThreadPool.cpp  Uri.cpp
test/: CMakeLists.txt  MainExecutor.py  catch.hpp  testLocation.cpp
test/19x/st/: Dockerfile  Makefile  README.md  docker-compose.yml  pom.xml
test/19x/st/src/main/java/com/mjwall/accumulo/: StandaloneMAC.java  StandaloneTestMAC.java
test/19x/st/src/main/java/com/mjwall/accumulo/commands/: SmacAccumuloShell.java  SmacZookeeperCli.java
test/19x/st/src/main/java/com/mjwall/accumulo/config/: RunningEnv.java
test/19x/st/src/main/resources/: smac_logger.xml
test/19x/st/src/test/java/com/mjwall/accumulo/: StandaloneMACTest.java
test/19x/st/src/test/resources/: testme.sh
test/constructs/: TestColumn.cpp  TestConstructs.cpp  TestSecurity.cpp  TestStreams.cpp  rfile_test.cpp  zlibTest.cpp
test/performance/: QuarterMillionWrites.py
test/performance/testmodule/: __init__.py
test/python/: TestAsyncOperations.py  TestAuthorizations.py  TestBadOperations.py  TestHedgedReads.py  TestIterator.py  TestRFileWrites.py  TestRanges.py  TestSecurityOperations.py  TestWithFx.py  TestWrites.py
test/python/testmodule/: __init__.py
test/services/: TestServer.h  mockAccumulo.cpp
test/vandv/: IntegrationTest.cpp  PerformanceTest.cpp  bigwrite.h  deletetest.h  integration.h  invalidscans.h  invalidtableops.h  testAuthsChange.h  testEmptyRange.h  testScanLocationMove.h  testSecurityOperations.h  testWriteRead.h
test/zookeeper/: Makefile  construct_test  testInstance  testInstance.cpp  testLocal.cpp
thrift/2.x/: client.thrift  data.thrift  gc.thrift  master.thrift  replication.thrift  security.thrift  tabletserver.thrift  trace.thrift
utils/: generatethrift.sh
(+343 files in other folders)
